re-enable integration tests